--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Etch-A-Sketch</h1>
-    <div class="square"></div>
+    <div class="container"></div>
     <script src="javascript.js"></script>
 </body>
 </html>
