--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Etch-A-Sketch</h1>
+    <p>Squares per side (between 16 and 100) :</p>
+    <input type="range" min="16" max="100">
+    <input type="submit">
     <div class="container"></div>
     <script src="javascript.js"></script>
 </body>
